tests/compile_fail/quantity_definition_with_numeric_factor.stderr
error: Only 1 and 1.0 are valid factors in quantity definitions.
  --> tests/compile_fail/quantity_definition_with_numeric_factor.rs:11:22
   |
11 |         def Length = 2.0 / Dimensionless,
   |                      ^^^
